/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package csheets.ext.search;

/**
 *
 * @author Rúben Teixeira 1140780@isep.ipp.pt
 */
public class SearchController {

}
